[tool.poetry]
name = "machine-learning-notebooks"
version = "0.1.0"
description = "Example notebooks for Machine Learning"
authors = ["Avaré Stewart <avare.stewart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.2.3"
numpy = "^1.20.1"
scipy = "^1.6.1"
matplotlib = "^3.3.4"
scikit-learn = "^0.24.1"
ipykernel = "^5.5.0"
jupyter_nbextensions_configurator = "^0.4.1"
jupyter-contrib-nbextensions = "^0.5.1"
jupyterlab = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
